# guildhall

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  Makefile.toml  Rocket.toml  fly.toml  go.mod  main.go  web_embed.go
api/authentication/: authenticate.go  authenticated.go  preauth.go
api/forges/: handlers.go
api/sessions/: session.go
db/: db.go
db/migrations/: 20240517161932_create_users_and_challenges.down.sql  20240517161932_create_users_and_challenges.up.sql  20240517162125_create_forges_and_forge_members.down.sql  20240517162125_create_forges_and_forge_members.up.sql
migrations/2024-04-11-005009_create_users/: up.sql
migrations/2024-04-11-022451_create_challenges/: down.sql  up.sql
models/challenge/: challenge.go
models/forge/: forge.go
models/forgemember/: forgemember.go  roles.go
models/user/: user.go
src/: database.rs  main.rs  schema.rs
src/api/: authentication.rs
src/models/: challenge.rs  mod.rs  user.rs
static/: flutter_service_worker.js  index.css  index.html  main.dart.js  version.json
static/assets/: NOTICES
static/auth/: index.js
static/counter/: index.js
static/topbar/: index.css  index.js
web/: authenticated.js  index.html  main.js  package-lock.json  package.json
web-comp/: index.html  package-lock.json  style.css
web-comp/app/components/: app-widget.js
web-comp/app/top-menu/: index.js
web/app/: authenticated.js
web/src/: App.css  App.jsx  Authenticated.jsx  Forges.jsx  Menu.css  Menu.jsx
web/src/components/: Card.css  Card.jsx
web/src/forges/: Create.jsx  Forge.jsx  (+1 more)
(+1 files in other folders)
