[package]
name = "guildhall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
diesel = { version = "2.1.5", features = ["postgres", "chrono"] }
rocket = { version = "0.5.0", features = ["json"] }
uuid = { version = "1.8.0", features = ["std", "v8", "rng", "v4"] }
serde = { version = "1.0.197", features = ["derive"] }
